cot-cli/tests/snapshot_testing/external/snapshots/cli__snapshot_testing__external__check__check_forwards_to_project_binary.snap
---
source: cot-cli/tests/snapshot_testing/external/check.rs
info:
  program: cot
  args:
    - check
---
success: true
exit_code: 0
----- stdout -----
Success verifying the configuration

----- stderr -----
