cot-cli/tests/snapshot_testing/external/snapshots/cli__snapshot_testing__external__check__check_with_no_project_binary_reports_build_hint.snap
---
source: cot-cli/tests/snapshot_testing/external/check.rs
info:
  program: cot
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unknown command `check` and no project binary was found in the `target` dir.
Hint: run `cargo build` first, or pass `cot --build check` to build it automatically.
