cot-cli/tests/snapshot_testing/external/snapshots/cli__snapshot_testing__external__check__double_dash_delimiter_fails_with_unsupported_flag_name.snap
---
source: cot-cli/tests/snapshot_testing/external/check.rs
info:
  program: cot
  args:
    - check
    - "--"
    - "--build"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: unexpected argument '--build' found

Usage: cot_test_standard check

For more information, try '--help'.
