cot-cli/tests/snapshot_testing/external/snapshots/cli__snapshot_testing__external__check__unrecognized_command_reports_unknown_command.snap
---
source: cot-cli/tests/snapshot_testing/external/check.rs
info:
  program: cot
  args:
    - "--build"
    - banana
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unknown command `banana`. Run `cot --help` to see available commands.
